--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>A dona aranha subiu pela parede</p>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker da Ana</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
     </ul>
