--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>A dona aranha subiu pela parede</p>
     <ul>
         <li>Vagrant Padrão</li>
-        <li>Docker Padrão</li>
+        <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Vagrant Padrão</li>
         <li>Docker Padrão</li>
         <li>Ansible Padrão</li>
