--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Título</h1>
     <p>A dona aranha subiu pela parede</p>
     <ul>
-        <li>Vagrant Padrão</li>
-        <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Vagrant Padrão</li>
-        <li>Docker Padrão</li>
-        <li>Ansible Padrão</li>
+        <li>Vagrant</li>
+        <li>Docker</li>
+        <li>Vagrant</li>
+        <li>Docker</li>
+        <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
     </ul>
 </body>
